# synapse

./: -v  .dockerignore  .git-blame-ignore-revs  .gitattributes  .gitignore  .pr-body-cloudflare-turn.md  .rustfmt.toml  AGENTS.md  CHANGES.md  CONTRIBUTING.md  Dockerfile.pypy  INSTALL.md  MIGRATION_ASYNCIO.md  README.md  README.rst  UPGRADE.rst  book.toml  build_rust.py  docker-bake.hcl  extra_config.cfg  flake.nix  index.html  mypy.ini  policy_server.py  pyproject.toml  test_profile.rs  tox.ini  update_licenses.py
.ci/: before_build_wheel.sh  complement_package.gotpl
.github/: CODEOWNERS  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml  zizmor.yml
changelog.d/: 14.feature  14984.bugfix  15.feature  16.misc  16307.bugfix  16756.misc  16757.misc  16758.misc  16759.feature  16760.bugfix  16761.bugfix  16763.doc  16766.misc  16767.bugfix  16768.doc  16769.doc  16774.misc  16775.bugfix  16776.misc  16777.misc  16778.doc  16780.misc  16781.misc  16782.misc  16783.misc  16785.misc  16787.feature  16788.misc  16805.misc  16806.misc  16808.misc  16810.doc  16811.misc  16819.feature  16820.misc  16827.bugfix  16828.misc  16831.doc  16833.misc  16840.misc  (+1402 more)
complement/: .golangci.yml  README.md  go.mod  go.sum
debian/: build_virtualenv  changelog  control  copyright  hash_password.1  hash_password.1.html  hash_password.ronn  register_new_matrix_user.ronn  rules  templates
demo/: start.sh
develop/: 404.html  CAPTCHA_SETUP.html  application_services.html  auth_chain_difference_algorithm.html  code_style.html  consent_tracking.html  delegate.html  deprecation_policy.html  federate.html  index.html  jwt.html  log_contexts.html  manhole.html  media_repository.html  message_retention_policies.html  metrics-howto.html  openid.html  opentracing.html  password_auth_providers.html  postgres.html  print.html  replication.html  reverse_proxy.html  room_and_user_statistics.html  searcher-c2a407aa.js  server_notices.html  sso_mapping_providers.html  structured_logging.html  synctl_workers.html  tcp_replication.html  templates.html  turn-howto.html  upgrade.html  user_directory.html  welcome_and_overview.html  workers.html
docker/: Dockerfile  Dockerfile-dhvirtualenv  Dockerfile-workers  README-testing.md  README.md  build_debian.sh  configure_workers_and_start.py  editable.Dockerfile  healthcheck.py  prefix-log  start.py
docs/: .sample_config_header.yaml  README.md  SUMMARY.md  code_style.md  consent_tracking.md  delegate.md  deprecation_policy.md  federate.md  log_contexts.md  manhole.md  message_retention_policies.md  metrics-howto.md  openid.md  postgres.md  presence_router_module.md  reverse_proxy.md  sample_application_service.yaml  spam_checker.md  sso_mapping_providers.md  structured_logging.md  tcp_replication.md  templates.md  turn-howto.md  upgrade.md  user_directory.md  webpush.md  welcome_and_overview.md  workers.md
latest/: 404.html  CAPTCHA_SETUP.html  application_services.html  auth_chain_difference_algorithm.html  code_style.html  consent_tracking.html  delegate.html  deprecation_policy.html  federate.html  index.html  jwt.html  log_contexts.html  manhole.html  media_repository.html  message_retention_policies.html  metrics-howto.html  openid.html  opentracing.html  password_auth_providers.html  postgres.html  print.html  replication.html  reverse_proxy.html  room_and_user_statistics.html  searcher-c2a407aa.js  server_notices.html  sso_mapping_providers.html  structured_logging.html  synctl_workers.html  tcp_replication.html  templates.html  turn-howto.html  upgrade.html  user_directory.html  welcome_and_overview.html  workers.html
rust/: Cargo.toml  build.rs
rust/benches/: evaluator.rs  glob.rs
rust/src/: canonical_json.rs  db.rs  deferred.rs  duration.rs  errors.rs  http.rs  http_client.rs  identifier.rs  json.rs  lib.rs  matrix_const.rs  room_versions.rs  segmenter.rs  state_res.rs  tikv_engine.rs  tmp_cachetrace.rs  tokio_runtime.rs
rust/src/acl/: mod.rs
rust/src/config/: mod.rs  types.rs
rust/src/database/: helpers.rs  mod.rs  runtime.rs  value.rs
rust/src/database/postgres/: connection.rs  cursor_state.rs  errors.rs  helpers.rs  libpq.rs  mod.rs  pool.rs  query.rs  tls.rs  value.rs
rust/src/db/: db.rs  python_db_pool.rs
rust/src/e2e_keys/: mod.rs
rust/src/events/: constants.rs  filter.rs  internal_metadata.rs  json_object.rs  mod.rs  relations.rs  serialize.rs  signatures.rs  unsigned.rs  utils.rs
rust/src/events/formats/: mod.rs  v1.rs  v2v3.rs  v4.rs  vmsc4242.rs
rust/src/handlers/: mod.rs  versions.rs
rust/src/logging/: context.rs  mod.rs
rust/src/msc4108v2025_rendezvous/: mod.rs  session.rs
rust/src/msc4388_rendezvous/: mod.rs  session.rs
rust/src/push/: base_rules.rs  evaluator.rs  mod.rs  utils.rs
rust/src/rendezvous/: mod.rs  session.rs
rust/src/storage/: mod.rs  store.rs
rust/src/storage/db/: mod.rs  python_db_pool.rs  rust_db_pool.rs
rust/src/types/: mod.rs
schema/: meta.schema.json  synapse-config.schema.json  synapse-config.schema.yaml
schemas/: synapse-config.schema.json
scripts/: migrate_twisted_imports.py  purge_deferreds.py  remove_twisted.py
scripts-dev/: benchmark_state_res.py  build_debian_packages.py  check-newsfragment.sh  check_line_terminators.sh  check_locked_deps_have_sdists.py  check_pydantic_models.py  check_schema_delta.py  complement.sh  docker_update_debian_changelog.sh  federation_client.py  gen_config_documentation.py  get_sched_tasks.sql  lint.sh  mypy_synapse_plugin.py  newsfile.py  next_github_number.sh  release.py  schema_versions.py  sign_json.py  test.sh
stubs/: hiredis.pyi  icu.pyi  sentry_sdk.pyi  txredisapi.pyi
synapse/: __init__.py  _pydantic_compat.py  event_auth.py  notifier.py  server.py  visibility.py
synmark/: __init__.py  __main__.py
tests/: __init__.py  async_helpers.py  server.py  test_distributor.py  test_event_auth.py  test_federation.py  test_mau.py  test_notifier.py  test_phone_home.py  test_server.py  test_state.py  test_terms_auth.py  test_test_utils.py  test_types.py  test_visibility.py  unittest.py  unittest_tikv.py  utils.py
v1.100/: jwt.html  (+2 more)
(+3649 files in other folders)
